--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,245 +1,310 @@
-* {
-  box-sizing: border-box; }
-
 body {
-  padding: 0;
-  margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #606c71; }
-
-a {
-  color: #1e6bb8;
-  text-decoration: none; }
-  a:hover {
-    text-decoration: underline; }
-
-.btn {
-  display: inline-block;
-  margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-  .btn + .btn {
-    margin-left: 1rem; }
-
-.btn:hover {
-  color: rgba(255, 255, 255, 0.8);
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
-
-@media screen and (min-width: 64em) {
-  .btn {
-    padding: 0.75rem 1rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .btn {
-    padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; } }
-
-@media screen and (max-width: 42em) {
-  .btn {
-    display: block;
+    /*background: rgba(0, 0, 0, 0.5);*/
+    position: fixed;
     width: 100%;
-    padding: 0.75rem;
-    font-size: 0.9rem; }
-    .btn + .btn {
-      margin-top: 1rem;
-      margin-left: 0; } }
-
-.page-header {
-  color: #fff;
-  text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
-
-@media screen and (min-width: 64em) {
-  .page-header {
-    padding: 5rem 6rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .page-header {
-    padding: 3rem 4rem; } }
-
-@media screen and (max-width: 42em) {
-  .page-header {
-    padding: 2rem 1rem; } }
-
-.project-name {
-  margin-top: 0;
-  margin-bottom: 0.1rem; }
-
-@media screen and (min-width: 64em) {
-  .project-name {
-    font-size: 3.25rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-name {
-    font-size: 2.25rem; } }
-
-@media screen and (max-width: 42em) {
-  .project-name {
-    font-size: 1.75rem; } }
-
-.project-tagline {
-  margin-bottom: 2rem;
-  font-weight: normal;
-  opacity: 0.7; }
-
-@media screen and (min-width: 64em) {
-  .project-tagline {
-    font-size: 1.25rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-tagline {
-    font-size: 1.15rem; } }
-
-@media screen and (max-width: 42em) {
-  .project-tagline {
-    font-size: 1rem; } }
-
-.main-content :first-child {
-  margin-top: 0; }
-.main-content img {
-  max-width: 100%; }
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  font-weight: normal;
-  color: #159957; }
-.main-content p {
-  margin-bottom: 1em; }
-.main-content code {
-  padding: 2px 4px;
-  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  font-size: 0.9rem;
-  color: #383e41;
-  background-color: #f3f6fa;
-  border-radius: 0.3rem; }
-.main-content pre {
-  padding: 0.8rem;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  color: #567482;
-  word-wrap: normal;
-  background-color: #f3f6fa;
-  border: solid 1px #dce6f0;
-  border-radius: 0.3rem; }
-  .main-content pre > code {
-    padding: 0;
+    height: 100%;
     margin: 0;
-    font-size: 0.9rem;
-    color: #567482;
-    word-break: normal;
-    white-space: pre;
-    background: transparent;
-    border: 0; }
-.main-content .highlight {
-  margin-bottom: 1rem; }
-  .main-content .highlight pre {
-    margin-bottom: 0;
-    word-break: normal; }
-.main-content .highlight pre, .main-content pre {
-  padding: 0.8rem;
-  overflow: auto;
-  font-size: 0.9rem;
-  line-height: 1.45;
-  border-radius: 0.3rem; }
-.main-content pre code, .main-content pre tt {
-  display: inline;
-  max-width: initial;
-  padding: 0;
-  margin: 0;
-  overflow: initial;
-  line-height: inherit;
-  word-wrap: normal;
-  background-color: transparent;
-  border: 0; }
-  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
-    content: normal; }
-.main-content ul, .main-content ol {
-  margin-top: 0; }
-.main-content blockquote {
-  padding: 0 1rem;
-  margin-left: 0;
-  color: #819198;
-  border-left: 0.3rem solid #dce6f0; }
-  .main-content blockquote > :first-child {
-    margin-top: 0; }
-  .main-content blockquote > :last-child {
-    margin-bottom: 0; }
-.main-content table {
-  display: block;
-  width: 100%;
-  overflow: auto;
-  word-break: normal;
-  word-break: keep-all; }
-  .main-content table th {
-    font-weight: bold; }
-  .main-content table th, .main-content table td {
-    padding: 0.5rem 1rem;
-    border: 1px solid #e9ebec; }
-.main-content dl {
-  padding: 0; }
-  .main-content dl dt {
-    padding: 0;
-    margin-top: 1rem;
-    font-size: 1rem;
-    font-weight: bold; }
-  .main-content dl dd {
-    padding: 0;
-    margin-bottom: 1rem; }
-.main-content hr {
-  height: 2px;
-  padding: 0;
-  margin: 1rem 0;
-  background-color: #eff0f1;
-  border: 0; }
+    /*color: white;*/
+    font-family: "Segoe UI Light";
+    /*background: url("../images/BK1.svg") no-repeat center center fixed;*/
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    text-align: center;
+}
 
-@media screen and (min-width: 64em) {
-  .main-content {
-    max-width: 64rem;
-    padding: 2rem 6rem;
-    margin: 0 auto;
-    font-size: 1.1rem; } }
+#clock{
+    background-color: yellow;
+    width: 26%;
+    position: fixed;
+    height: 22.5%;
+    top: 1%;
+    left: 37%;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border:1px solid black;
+    cursor: pointer;
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .main-content {
-    padding: 2rem 4rem;
-    font-size: 1.1rem; } }
+#matchCount{
+    height: 30%;
+    /*background-color: darkgreen;*/
+}
 
-@media screen and (max-width: 42em) {
-  .main-content {
-    padding: 2rem 1rem;
-    font-size: 1rem; } }
+#time{
+    height: 70%;
+}
 
-.site-footer {
-  padding-top: 2rem;
-  margin-top: 2rem;
-  border-top: solid 1px #eff0f1; }
+#redPanel{
+    width: 50%;
+    height: 100%;
+    /*background-color: #e74c3c;*/
+    float: left;
+}
 
-.site-footer-owner {
-  display: block;
-  font-weight: bold; }
+#bluePanel{
+    width: 50%;
+    height: 100%;
+    /*background-color: #3498db;*/
+    float: right;
+}
 
-.site-footer-credits {
-  color: #819198; }
+.infoMatch{
+    /*background-color: burlywood;*/
+    height: 15%;
+    padding: 1%;
+    margin-bottom: -1%;
+}
 
-@media screen and (min-width: 64em) {
-  .site-footer {
-    font-size: 1rem; } }
+#WeightSex{
+    width: 50px;
+    height: 100%;
+    /*background-color: burlywood;*/
+    float: left;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border:1px solid black;
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .site-footer {
-    font-size: 1rem; } }
+#weight{
+    height: 50%;
+    /*background-color: aqua;*/
+}
 
-@media screen and (max-width: 42em) {
-  .site-footer {
-    font-size: 0.9rem; } }
+#sex{
+    height: 50%;
+    /*background-color: darkgreen;*/
+}
+
+#typeMatch{
+    margin-left: 1%;
+    width: 50px;
+    height: 100%;
+    /*background-color: grey;*/
+    float: left;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border:1px solid black;
+}
+
+.infoFighter{
+    /*background-color: cadetblue;*/
+    height: 15%;
+    width: 70%;
+}
+
+.bigInfo{
+    /*background-color: darkgreen;*/
+    height: 60%;
+    font-weight: 700;
+}
+
+#biginfoRed{
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border-bottom:2px solid red;
+    position: relative;
+    color: red;
+}
+
+#biginfoBlue{
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border-bottom:2px solid blue;
+    position: relative;
+    color: blue;
+}
+
+.smallInfo{
+    /*background-color: dodgerblue;*/
+    height: 40%;
+
+}
+
+#biginfoRedText{
+    margin-left: 3%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+#biginfoBlueText{
+    margin-right: 3%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+#smallInfoRed{
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border-top:2px solid red;
+    position: relative;
+    color: red;
+}
+
+#smallInfoBlue{
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border-top:2px solid blue;
+    position: relative;
+    color: blue;
+}
+
+#smallInfoRedText{
+    margin-left: 3%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#smallInfoBlueText{
+    margin-right: 3%;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.score{
+    /*background-color: darkolivegreen;*/
+    height: 63%;
+    font-family: sans-serif;
+}
+
+.button{
+    width: 90%;
+    height: 7%;
+}
+
+.button.red{
+    /*background-color: dimgrey;*/
+    color: red;
+}
+
+.btn{
+    /*background-color: brown;*/
+    width: 20%;
+    height: 100%;
+    float: left;
+    cursor: pointer;
+    -webkit-transition: all 0.3s; /* Safari */
+    transition: all 0.3s;
+}
+
+.btn.Red:hover{
+    color: white;
+    background-color: red;
+}
+
+.btn.Blue:hover{
+    color: white;
+    background-color: blue;
+}
+
+.infoFighter.blue{
+    margin-left: 30%;
+}
+
+.button.blue{
+    color: blue;
+    float: right;
+}
+
+#numberMatch{
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 1px solid black;
+    height: 100%;
+    float: right;
+}
+
+.scoreText{
+    width: 90%;
+    /*background-color: burlywood;*/
+    font-size: 50px;
+    color: white;
+    height: 100%;
+    cursor: pointer;
+    font-weight: 700;
+}
+
+.scoreText.Red{
+background-color: red;
+    float: left;
+}
+
+.scoreBox{
+    /*background-color: cyan;*/
+    float: left;
+    width: 10%;
+    height: 100%;
+    position: relative;
+}
+
+.scoreBox.Red{
+
+}
+
+.HBox{
+    height: 50%;
+}
+
+.HBoxTextH{
+    height: 50%;
+    /*background-color: coral;*/
+}
+
+.HBoxTextH.Red{
+
+}
+
+.HBoxTextScore{
+    height: 10%;
+    width: 90%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 1px solid;
+    position: absolute;
+    margin: 5%;
+}
+
+.HBoxTextScore.H1{
+    top: 35%;
+}
+
+.HBoxTextScore.H2{
+    bottom: 35%;
+}
+
+.scoreText.Blue{
+    float: right;
+    background-color: blue;
+}
+
+.scoreBox.Blue{
+
+}
+
+.HBoxTextScore.Blue{
+    margin-left: 5%;
+}
+
+.HBoxTextScore.Red{
+    color: red;
+    border-color: red;
+}
+
+.HBoxTextScore.Blue{
+    color: Blue;
+    border-color: blue;
+}
